# gcd-rs

./: Cargo.toml  README.md
src/: composer.rs  lib.rs  parser.rs  part_number.rs  record.rs  version.rs
src/examples/: create.rs  extract.rs  read.rs  serialize.rs
src/record/: checksum.rs  descriptor.rs  filler.rs  firmware.rs  main.rs  text.rs
src/record/descriptor/: descriptor_data.rs  descriptor_type.rs
